--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ input::placeholder {
 }
 
 #login-btn:hover {
-  color: #f3c018ac;
+  color: #ffffff;
 }
 
 ul {
@@ -45,12 +45,13 @@ button {
   margin-left: 2em;
   border: none;
   background-color: #ffffff00;
+  cursor: pointer;
 }
 
 img {
   position: absolute;
-  width: 100%;
   height: 100%;
+  width: 100%;
   left: 0px;
   top: 0px;
   right: 0px;
@@ -73,4 +74,27 @@ img {
 
 #weather span:first-child {
   padding-right: 10px;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.snowflake {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  top: -8px;
+  animation: fall 10s linear;
+}
+
+@keyframes fall {
+  from {
+  }
+  to {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
 }
