--- a/css/style.css
+++ b/css/style.css
@@ -3,33 +3,39 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: 'Noto Sans KR', sans-serif;
   text-align: center;
 }
 
 input {
   border: none;
-  background-color: #f000;
+  background-color: rgba(0, 0, 0, 0);
   width: 500px;
-  font-size: 40px;
+  font-size: 120%;
   margin: 50px 0;
 }
 
 input::placeholder {
-  color: rgba(0, 0, 0, 0.675);
+  color: rgba(0, 0, 0, 0.866);
   text-align: center;
 }
 
 #login-btn {
-  text-align: start;
-  font-size: 20px;
+  background-color: #0d6efd;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 100%;
   width: 100px;
   cursor: pointer;
-  padding: 0px;
+  padding: 5px;
 }
 
 #login-btn:hover {
-  color: #ffffff;
+  background-color: #0b5ed7;
 }
 
 .todo {
@@ -67,6 +73,7 @@ img {
   bottom: 0px;
   z-index: -1;
   object-fit: cover;
+
   /* opacity: 80%; */
 }
 
@@ -99,11 +106,41 @@ body::-webkit-scrollbar {
   top: -8px;
 }
 
+.todo button {
+  color: #ffffff;
+}
+
 @keyframes fall {
   from {
   }
   to {
     transform: translateY(100vh);
     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #clock {
+    font-size: 50px;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+  #input-name,
+  #todo-form input {
+    font-size: 30px;
+    text-align: center;
+  }
+  #login-btn {
+    display: none;
+  }
+  .snowflake {
+    display: none;
+  }
+  img {
+    position: fixed;
   }
 }
